--- a/src/sass/common.scss
+++ b/src/sass/common.scss
@@ -36,6 +36,8 @@
 @import "common/blocks/appointment.sass";
 @import "common/blocks/reviews.sass";
 @import "common/blocks/article-preview.sass";
+@import "common/blocks/articles-categories.sass";
+@import "common/blocks/articles-post.sass";
 
 @import "common/screens/services/screen-1.sass";
 @import "common/screens/services/screen-2.sass";
