--- a/src/sass/common/blocks/articles-categories.sass
+++ b/src/sass/common/blocks/articles-categories.sass
@@ -44,6 +44,11 @@
     @media (min-width: 767px)
       display: none
       text-align: left
+      font-family: Circe
+      font-size: 48px
+      font-style: normal
+      font-weight: 400
+      line-height: 56px
     &.fix
       display: none
       @media (min-width: 767px)
