--- a/src/sass/common/blocks/articles-post.sass
+++ b/src/sass/common/blocks/articles-post.sass
@@ -43,24 +43,32 @@
     font-size: 24px
     font-style: normal
     font-weight: 400
-    line-height: 32px
-    margin-bottom: 8px
+    line-height: 28px
+    @media (min-width: 767px)
+      margin-bottom: 8px
+      line-height: 32px
   &__description
     font-family: Circe
     font-size: 20px
     font-style: normal
     font-weight: 400
     line-height: 26px
+    display: none
+    @media (min-width: 767px)
+      display: block
   &__img
-    height: 250px
     margin-bottom: 32px
     @media (min-width: 767px)
       margin-bottom: 24px
     .img
       width: 100%
-      height: 100%
       border-radius: 24px
     & img
+      position: absolute
+      top: 0
+      left: 0
+      right: 0
+      bottom: 0
       width: 100%
       height: 100%
       object-fit: cover
