--- a/src/sass/common/blocks/articles-categories.sass
+++ b/src/sass/common/blocks/articles-categories.sass
@@ -60,6 +60,12 @@
   margin-bottom: 24px
   @media (min-width: 767px)
     margin-bottom: 68px
+  &--bottom // Вот это надо добавить
+    margin-top: 80px
+    margin-bottom: 74px
+    @media (min-width: 767px)
+      margin-top: 100px
+      margin-bottom: 84px
   h1
     margin-bottom: 0
   .title-h2
@@ -112,10 +118,8 @@
   flex-wrap: wrap
   gap: 8px
   margin-top: 40px
-  margin-bottom: 80px
   @media (min-width: 767px)
     margin-top: 60px
-    margin-bottom: 100px
   .page-numbers
     display: flex
     justify-content: center
