--- a/src/sass/common/blocks/articles-categories.sass
+++ b/src/sass/common/blocks/articles-categories.sass
@@ -25,6 +25,12 @@
   &__image
     width: 100%
     @media (min-width: 767px)
+      max-width: 250px
+    @media (min-width: 991px)
+      max-width: 250px
+    @media (min-width: 1280px)
+      max-width: 280px
+    @media (min-width: 1490px)
       max-width: 420px
     img
       width: 100%
@@ -57,8 +63,10 @@
   &--1
 
 .articles-categories
+  margin-top: 16px
   margin-bottom: 24px
   @media (min-width: 767px)
+    margin-top: 24px
     margin-bottom: 68px
   &--bottom // Вот это надо добавить
     margin-top: 80px
@@ -68,30 +76,35 @@
       margin-bottom: 84px
   h1
     margin-bottom: 0
-  .title-h2
+  .title-h2--mt
     margin-top: 24px
   &__slider
     width: calc(100% + 40px) !important
     padding: 20px !important
     margin: -20px !important
     &::before
-      content: ''
-      position: absolute
-      top: 0
-      right: 0
-      bottom: 0
-      width: 100px
-      background: linear-gradient(90deg,rgba(255,255,255,0),#fff)
-      z-index: 9
-      pointer-events: none
+      @media (min-width: 767px)
+        content: ''
+        position: absolute
+        top: 0
+        right: 0
+        bottom: 0
+        width: 100px
+        background: linear-gradient(90deg,rgba(255,255,255,0),#fff)
+        z-index: 9
+        pointer-events: none
   &__item
     display: flex
     width: fit-content !important
+    max-width: 300px
     padding: 8px 24px
     gap: 8px
     border-radius: 24px
     background: #FFF
     box-shadow: 0px 0px 12px 0px rgba(24, 109, 228, 0.15)
+    transition: 0.2s
+    &:hover &__title
+      color: var(--primary)
   &__image
     width: 48px
     height: 48px
@@ -106,6 +119,9 @@
     font-style: normal
     font-weight: 400
     line-height: 26px
+    white-space: nowrap
+    overflow: hidden
+    text-overflow: ellipsis
   &__description
     color: #A9AEBA
     font-family: Circe
