--- a/src/sass/common/blocks/articles-post.sass
+++ b/src/sass/common/blocks/articles-post.sass
@@ -1,5 +1,9 @@
 .articles
   gap: 40px
+  &.bottom
+    margin-bottom: 80px
+    @media (min-width: 767px)
+      margin-bottom: 100px
   & > *
     width: 100%
     @media (min-width: 991px)
@@ -62,7 +66,6 @@
       margin-bottom: 24px
     .img
       width: 100%
-      border-radius: 24px
     & img
       position: absolute
       top: 0
@@ -72,6 +75,7 @@
       width: 100%
       height: 100%
       object-fit: cover
+      border-radius: 24px
   &__category
     left: 0
     bottom: -16px
@@ -84,5 +88,10 @@
       left: 24px
       bottom: 16px
   &__calendar
+    margin-left: auto
+    margin-right: 16px
+    @media (min-width: 767px)
+      margin-left: unset
+      margin-right: unset
     span
       color: #93BBF2
